--- a/templates/index.html
+++ b/templates/index.html
@@ -38,7 +38,7 @@
         </nav>
     </header>
 
-    <div class="py-3 py-sm-0 bg-white"></div>
+    <div class="py-3 py-sm-0 bg-white"></div>  <!-- Add padding on devices smaller than sm so navbar does not overlap -->
 
     <div class="vh-100 d-flex align-items-center bg-white">
         <div class="row w-100 gx-3 mx-sm-5 shadow-lg border rounded-3">
@@ -93,12 +93,14 @@
         </div>
     </div>
 
+    
+
     <div class="separate"></div>  <!-- Separator using tilable images -->
 
     <div class="container">
         <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
             <div class="col-md-4 d-flex align-items-center">
-                <span class="mb-3 mb-md-0 text-body-secondary">© 2023 Company, Inc</span>
+                <span class="mb-3 mb-md-0 text-body-secondary">© 2023 GPT-Abusers, Pte Ltd</span>
             </div>
         
             <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
